[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meok-nhvr-australia-mcp"
version = "1.0.0"
description = "Australia National Heavy Vehicle Regulator (NHVR) compliance MCP. Heavy Vehicle National Law fatigue (BFM/AFM), NHVAS modules (Mass/Maintenance/Fatigue), Chain of Responsibility, Performance-Based Standards (PBS), Electronic Work Diary (EWD), state-specific rules. By MEOK AI Labs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Nicholas Templeman", email = "nicholas@meok.ai" }]
keywords = ["mcp", "nhvr", "nhvas", "hvnl", "chain-of-responsibility", "australia", "heavy-vehicle", "ewd", "pbs", "fatigue-management", "haulage", "meok"]
classifiers = [
  "Development Status :: 4 - Beta",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Office/Business :: Financial",
]
dependencies = ["mcp[cli]>=1.3.0"]

[project.urls]
Homepage = "https://haulage.app"
Repository = "https://github.com/CSOAI-ORG/meok-nhvr-australia-mcp"

[project.scripts]
meok-nhvr-australia-mcp = "server:main"

[tool.setuptools]
py-modules = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]


[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_Configs = true
disallow_untyped_defs = true

